external/SDK Guard/BCPP/ZGuard.h


enum ZG_GUARD_MODE
{
	ZG_GUARD_UNDEF = 0,		
	ZG_GUARD_NORMAL,		
	ZG_GUARD_ADVANCED,		
	ZG_GUARD_TEST,			
	ZG_GUARD_ACCEPT			
};
typedef struct _ZG_CVT_INFO : _ZP_DEVICE_INFO {
	ZG_CVT_TYPE nType;		
	ZG_CVT_SPEED nSpeed;	
	ZG_GUARD_MODE nMode;	
	LPWSTR pszLinesBuf;		
	INT nLinesBufMax;		
} *PZG_CVT_INFO;
typedef struct _ZG_CVT_LIC_INFO {
	WORD nStatus;			
	WORD Reserved;			
	INT nMaxCtrs;			
	INT nMaxKeys;			
	WORD nMaxYear;			
	WORD nMaxMon;			
	WORD nMaxDay;			
	WORD nDownCountTime;	
} *PZG_CVT_LIC_INFO;
typedef struct _ZG_CVT_LIC_SINFO {
	int nLicN;				
	int nMaxCtrs;			
	INT nMaxKeys;			
} *PZG_CVT_LIC_SINFO;
enum ZG_CTR_TYPE
{
	ZG_CTR_UNDEF	= 0,	
	ZG_CTR_GATE2K,			
	ZG_CTR_MATRIX2NET,		
	ZG_CTR_Z5RNET,			
	ZG_CTR_Z5RNET8K,		
	ZG_CTR_GUARDNET,		
	ZG_CTR_Z9,				
	ZG_CTR_EUROLOCK,		
	ZG_CTR_Z5RWEB			
};
enum ZG_CTR_SUB_TYPE
{
	ZG_CS_UNDEF	= 0,		
	ZG_CS_DOOR,				
	ZG_CS_TURNSTILE,		
	ZG_CS_GATEWAY,			
	ZG_CS_BARRIER			
};
typedef UINT ZG_CTRI_FLAGS;
typedef struct _ZG_FIND_CTR_INFO {
	ZG_CTR_TYPE nType;		
	BYTE nTypeCode;			
	BYTE nAddr;				
	WORD nSn;				
	WORD nVersion;			
	INT nMaxKeys;			
	INT nMaxEvents;			
	ZG_CTRI_FLAGS nFlags;		
	ZG_CTR_SUB_TYPE nSubType;
} *PZG_FIND_CTR_INFO;
typedef struct _ZG_CTR_INFO {
	ZG_CTR_TYPE nType;		
	BYTE nTypeCode;			
	BYTE nAddr;				
	WORD nSn;				
	WORD nVersion;			
	INT nInfoLineCount;		
	INT nMaxKeys;			
	INT nMaxEvents;			
	UINT nFlags;			
	WORD Reserved;			
	LPWSTR pszLinesBuf;		
	INT nLinesBufMax;		
	ZG_CTR_SUB_TYPE nSubType;
	INT nOptReadItems;		
	INT nOptWriteItems;		
} *PZG_CTR_INFO;
enum ZG_CTR_MODE
{
	ZG_MODE_UNDEF = 0,
	ZG_MODE_NORMAL,			
	ZG_MODE_BLOCK,			
	ZG_MODE_FREE,			
	ZG_MODE_WAIT			
};
typedef struct _ZG_CTR_TIMEZONE {
	BYTE nDayOfWeeks;		
	BYTE nBegHour;			
	BYTE nBegMinute;		
	BYTE nEndHour;			
	BYTE nEndMinute;		
	BYTE Reserved[3];
	ZG_CTR_MODE nMode;		
} *PZG_CTR_TIMEZONE;
enum ZG_CTR_KEY_TYPE
{
	ZG_KEY_UNDEF = 0,	
	ZG_KEY_NORMAL,		
	ZG_KEY_BLOCKING,	
	ZG_KEY_MASTER		
};
typedef UINT ZG_KEY_FLAGS;
typedef struct _ZG_CTR_KEY {
	BOOL fErased;				
	Z_KEYNUM rNum;				
	ZG_CTR_KEY_TYPE nType;		
	ZG_KEY_FLAGS nFlags;		
	UINT nAccess;				
	BYTE aData1[4];				
} *PZG_CTR_KEY;
typedef struct _ZG_CTR_CLOCK {
	BOOL fStopped;				
	WORD nYear;					
	WORD nMonth;				
	WORD nDay;					
	WORD nHour;					
	WORD nMinute;				
	WORD nSecond;				
} *PZG_CTR_CLOCK;
typedef UINT ZG_CVTN_FLAGS;
typedef struct _ZG_CVT_NOTIFY_SETTINGS {
	ZG_CVTN_FLAGS nNMask;		
	HANDLE hEvent;          	
	HWND hWindow;				
	UINT nWndMsgId;         	
	DWORD nScanCtrsPeriod;		
	INT nScanCtrsLastAddr;		
} *PZG_CVT_NOTIFY_SETTINGS;
typedef UINT ZG_CTRN_FLAGS;
typedef struct _ZG_CTR_NOTIFY_SETTINGS {
	ZG_CTRN_FLAGS nNMask;		
	HANDLE hEvent;          	
	HWND hWnd;              	
	UINT nWndMsgId;         	
	INT nReadEvIdx;				
	DWORD nCheckStatePeriod;	
	DWORD nClockOffs;			
} *PZG_CTR_NOTIFY_SETTINGS;
typedef UINT ZG_CVTS_FLAGS;
typedef BOOL (CALLBACK* ZG_PROCESSCALLBACK) (INT nPos, INT nMax, PVOID pUserData);
typedef BOOL (CALLBACK* ZG_ENUMCTRSPROC) (PZG_FIND_CTR_INFO pInfo, INT nPos, INT nMax, PVOID pUserData);
typedef BOOL (CALLBACK* ZG_ENUMCTRTIMEZONESPROC) (INT nIdx, PZG_CTR_TIMEZONE pTz, PVOID pUserData);
typedef BOOL (CALLBACK* ZG_ENUMCTRKEYSPROC) (INT nIdx, PZG_CTR_KEY pKey, INT nPos, INT nMax, PVOID pUserData);
ZGUARD_API(HRESULT) ZG_Cvt_SetCapture(HANDLE hHandle);
ZGUARD_API(HRESULT) ZG_Cvt_ReleaseCapture(HANDLE hHandle);
ZGUARD_API(HRESULT) ZG_Cvt_Clear(HANDLE hHandle);
ZGUARD_API(HRESULT) ZG_Cvt_Send(HANDLE hHandle, LPCVOID pData, INT nCount);
ZGUARD_API(HRESULT) ZG_Cvt_Receive(HANDLE hHandle, LPVOID pBuf, INT nBufSize, INT nMinRead, LPINT pRCount);
ZGUARD_API(HRESULT) ZG_Cvt_Exec(HANDLE hHandle, LPCVOID pData, INT nCount,
	LPVOID pBuf, INT nBufSize, INT nMinRead, LPINT pRCount);
#define ZG_F_UPDATE		1	
ZGUARD_API(HRESULT) ZG_Cvt_EnumControllers(HANDLE hHandle, ZG_ENUMCTRSPROC pEnumProc, PVOID pUserData, UINT nFlags=ZG_F_UPDATE);
ZGUARD_API(HRESULT) ZG_Cvt_FindController(HANDLE hHandle, BYTE nAddr, PZG_FIND_CTR_INFO pInfo, 
	UINT nFlags=ZG_F_UPDATE, PZP_WAIT_SETTINGS pWait=NULL);
ZGUARD_API(HRESULT) ZG_Cvt_SearchControllers(HANDLE hHandle, INT nMaxCtrs, ZG_CVTS_FLAGS nFlags=0);
ZGUARD_API(HRESULT) ZG_Cvt_FindNextController(HANDLE hHandle, PZG_FIND_CTR_INFO pInfo);
ZGUARD_API(HRESULT) ZG_Cvt_GetInformation(HANDLE hHandle, PZG_CVT_INFO pInfo);
ZGUARD_API(HRESULT) ZG_Cvt_SetNotification(HANDLE hHandle, PZG_CVT_NOTIFY_SETTINGS pSettings);
ZGUARD_API(HRESULT) ZG_Cvt_GetNextMessage(HANDLE hHandle, PUINT pMsg, LPARAM* pMsgParam);
ZGUARD_API(HRESULT) ZG_Cvt_GetScanCtrsState(HANDLE hHandle, LPINT pNextAddr);
ZGUARD_API(HRESULT) ZG_Cvt_UpdateFirmware(HANDLE hHandle, LPCVOID pData, INT nCount,
	ZG_PROCESSCALLBACK pfnCallback, PVOID pUserData);
ZGUARD_API(HRESULT) ZG_Cvt_GetLicense(HANDLE hHandle, BYTE nLicN, PZG_CVT_LIC_INFO pInfo);
ZGUARD_API(HRESULT) ZG_Cvt_SetLicenseData(HANDLE hHandle, BYTE nLicN, LPCVOID pData, INT nCount, LPWORD pLicStatus=NULL);
ZGUARD_API(HRESULT) ZG_Cvt_ClearAllLicenses(HANDLE hHandle);
ZGUARD_API(HRESULT) ZG_Cvt_GetAllLicenses(HANDLE hHandle, PZG_CVT_LIC_SINFO pBuf, INT nBufSize, LPINT pCount);
ZGUARD_API(HRESULT) ZG_Cvt_GetShortInfo(HANDLE hHandle, LPWORD pSn, ZG_GUARD_MODE* pMode);
ZGUARD_API(HRESULT) ZG_Cvt_GetLongInfo(HANDLE hHandle, PWORD pSn, PDWORD pVersion, ZG_GUARD_MODE* pMode,
	LPSTR pBuf, INT nBufSize, LPINT pLen); 
ZGUARD_API(HRESULT) ZG_Cvt_UpdateCtrFirmware(HANDLE hHandle, WORD nCtrSn, LPCVOID pData, INT nCount, LPCSTR pszInfoStr,
	ZG_PROCESSCALLBACK pfnCallback, PVOID pUserData, ZG_CTR_TYPE nModel=ZG_CTR_UNDEF);
ZGUARD_API(HRESULT) ZG_Cvt_SetCtrAddrBySn(HANDLE hHandle, WORD nSn, BYTE nNewAddr, ZG_CTR_TYPE nModel=ZG_CTR_UNDEF);
ZGUARD_API(HRESULT) ZG_Cvt_SetCtrAddr(HANDLE hHandle, BYTE nOldAddr, BYTE nNewAddr, ZG_CTR_TYPE nModel=ZG_CTR_UNDEF);
ZGUARD_API(HRESULT) ZG_Cvt_GetCtrInfoNorm(HANDLE hHandle, BYTE nAddr, PBYTE pTypeCode, LPWORD pSn, LPWORD pVersion, LPINT pInfoLines, PUINT pFlags, ZG_CTR_TYPE nModel=ZG_CTR_UNDEF);
ZGUARD_API(HRESULT) ZG_Cvt_GetCtrInfoAdv(HANDLE hHandle, BYTE nAddr, PBYTE pTypeCode, LPWORD pSn, LPWORD pVersion, PUINT pFlags, PINT pEvWrIdx, PINT pEvRdIdx);
ZGUARD_API(HRESULT) ZG_Cvt_GetCtrInfoBySn(HANDLE hHandle, WORD nSn, PBYTE pTypeCode, LPBYTE pAddr, LPWORD pVersion, LPINT pInfoLines, PUINT pFlags, ZG_CTR_TYPE nModel=ZG_CTR_UNDEF);
ZGUARD_API(HRESULT) ZG_Cvt_GetCtrInfoLine(HANDLE hHandle, WORD nSn, INT nLineN, LPSTR pBuf, INT nBufSize, LPINT pLen=NULL, ZG_CTR_TYPE nModel=ZG_CTR_UNDEF);
ZGUARD_API(HRESULT) ZG_Cvt_GetCtrVersion(HANDLE hHandle, BYTE nAddr, LPBYTE pVerData5, PZP_WAIT_SETTINGS pWS=NULL);
ZGUARD_API(HRESULT) ZG_Ctr_Open(PHANDLE pHandle, HANDLE hCvtHandle, BYTE nAddr, WORD nSn, PZG_CTR_INFO pInfo=NULL, ZG_CTR_TYPE nModel=ZG_CTR_UNDEF);
ZGUARD_API(HRESULT) ZG_Ctr_GetInformation(HANDLE hHandle, PZG_CTR_INFO pInfo);
ZGUARD_API(HRESULT) ZG_Ctr_SetNotification(HANDLE hHandle, PZG_CTR_NOTIFY_SETTINGS pSettings);
ZGUARD_API(HRESULT) ZG_Ctr_GetNextMessage(HANDLE hHandle, PUINT pMsg, LPARAM* pMsgParam);
ZGUARD_API(HRESULT) ZG_Ctr_SetNewAddr(HANDLE hHandle, BYTE nNewAddr);
ZGUARD_API(HRESULT) ZG_Ctr_AssignAddr(HANDLE hHandle, BYTE nAddr);
ZGUARD_API(HRESULT) ZG_Ctr_UpdateFirmware(HANDLE hHandle, LPCVOID pData, INT nCount, LPCSTR pszInfoStr,
	ZG_PROCESSCALLBACK pfnCallback, PVOID pUserData);
ZGUARD_API(HRESULT) ZG_Ctr_OpenLock(HANDLE hHandle, INT nLockN=0);
ZGUARD_API(HRESULT) ZG_Ctr_CloseLock(HANDLE hHandle);
ZGUARD_API(HRESULT) ZG_Ctr_EnableEmergencyUnlocking(HANDLE hHandle, BOOL fEnable);
ZGUARD_API(HRESULT) ZG_Ctr_IsEmergencyUnlockingEnabled(HANDLE hHandle, PBOOL pEnabled);
ZGUARD_API(HRESULT) ZG_Ctr_ReadRegs(HANDLE hHandle, DWORD nAddr, INT nCount, LPVOID pBuf);
ZGUARD_API(HRESULT) ZG_Ctr_ReadPorts(HANDLE hHandle, LPDWORD pData);
ZGUARD_API(HRESULT) ZG_Ctr_ControlDevices(HANDLE hHandle, DWORD nDevType, BOOL fActive, DWORD nTimeMs=0);
ZGUARD_API(HRESULT) ZG_Ctr_ReadData(HANDLE hHandle, INT nBankN, DWORD nAddr, INT nCount, LPVOID pBuf,
	LPINT pReaded, ZG_PROCESSCALLBACK pfnCallback, PVOID pUserData);
ZGUARD_API(HRESULT) ZG_Ctr_WriteData(HANDLE hHandle, INT nBankN, DWORD nAddr, LPCVOID pData, INT nCount,
	LPINT pWritten, ZG_PROCESSCALLBACK pfnCallback, PVOID pUserData);
ZGUARD_API(HRESULT) ZG_Ctr_ReadLockTimes(HANDLE hHandle, LPDWORD pOpenMs, LPDWORD pLetMs, LPDWORD pMaxMs, INT nBankN=0);
ZGUARD_API(HRESULT) ZG_Ctr_WriteLockTimes(HANDLE hHandle, DWORD nMask, DWORD nOpenMs, DWORD nLetMs, DWORD nMaxMs, INT nBankN=0);
ZGUARD_API(HRESULT) ZG_Ctr_ReadTimeZones(HANDLE hHandle, INT nIdx, PZG_CTR_TIMEZONE pBuf, INT nCount,
	ZG_PROCESSCALLBACK pfnCallback, PVOID pUserData, INT nBankN=0);
ZGUARD_API(HRESULT) ZG_Ctr_WriteTimeZones(HANDLE hHandle, INT nIdx, PZG_CTR_TIMEZONE pTzs, INT nCount,
	ZG_PROCESSCALLBACK pfnCallback, PVOID pUserData, INT nBankN=0);
ZGUARD_API(HRESULT) ZG_Ctr_EnumTimeZones(HANDLE hHandle, INT nStart, ZG_ENUMCTRTIMEZONESPROC fnEnumProc, PVOID pUserData, INT nBankN=0);
ZGUARD_API(HRESULT) ZG_Ctr_ReadKeys(HANDLE hHandle, INT nIdx, PZG_CTR_KEY pBuf, INT nCount,
	ZG_PROCESSCALLBACK pfnCallback, PVOID pUserData, INT nBankN=0);
ZGUARD_API(HRESULT) ZG_Ctr_WriteKeys(HANDLE hHandle, INT nIdx, PZG_CTR_KEY pKeys, INT nCount,
	ZG_PROCESSCALLBACK pfnCallback, PVOID pUserData, INT nBankN=0, BOOL fUpdateTop=TRUE);
ZGUARD_API(HRESULT) ZG_Ctr_ClearKeys(HANDLE hHandle, INT nIdx, INT nCount,
	ZG_PROCESSCALLBACK pfnCallback, PVOID pUserData, INT nBankN=0, BOOL fUpdateTop=TRUE);
ZGUARD_API(HRESULT) ZG_Ctr_GetKeyTopIndex(HANDLE hHandle, LPINT pIdx, INT nBankN=0);
ZGUARD_API(HRESULT) ZG_Ctr_EnumKeys(HANDLE hHandle, INT nStart, ZG_ENUMCTRKEYSPROC fnEnumProc, PVOID pUserData, INT nBankN=0);
ZGUARD_API(HRESULT) ZG_Ctr_GetClock(HANDLE hHandle, PZG_CTR_CLOCK pClock);
ZGUARD_API(HRESULT) ZG_Ctr_SetClock(HANDLE hHandle, PZG_CTR_CLOCK pClock);