external/SDK Guard/Delphi/ZGuard.pas


// Захватить порт (приостанавливает фоновые операции с портом)
function ZG_Cvt_SetCapture(AHandle: THandle): HResult; stdcall;
// Отпустить порт (возобновляет фоновые операции с портом)
function ZG_Cvt_ReleaseCapture(AHandle: THandle): HResult; stdcall;
// Очищает порт конвертера
function ZG_Cvt_Clear(AHandle: THandle): HResult; stdcall;
// Отправляет запрос конвертеру
function ZG_Cvt_Send(AHandle: THandle; Const AData; ACount: Integer): HResult; stdcall;
// Возвращает ответ от конвертера
function ZG_Cvt_Receive(AHandle: THandle; var VBuf; ABufSize: Integer;
    AMinRead: Integer; var VRCount: Integer): HResult; stdcall;
// Отправляет запрос и возвращает ответ от конвертера
function ZG_Cvt_Exec(AHandle: THandle; Const AData; ACount: Integer;
    var VBuf; ABufSize: Integer; AMinRead: Integer; var VRCount: Integer): HResult; stdcall;

// Перечисляет все подключенные контроллеры (для не Guard-конвертеров нужно предварительно настроить уведомления о подкл/откл. контроллеров)
function ZG_Cvt_EnumControllers(AHandle: THandle;
    AEnumProc: TZG_ENUMCTRSPROC; AUserData: Pointer; AFlags: Cardinal=ZG_F_UPDATE): HResult; stdcall;
// Ищет контроллеры по сетевому адресу
function ZG_Cvt_FindController(AHandle: THandle; AAddr: Byte; var VInfo: TZG_FIND_CTR_INFO;
    AFlags: Cardinal=ZG_F_UPDATE; AWait: PZP_WAIT_SETTINGS=nil): HResult; stdcall;

function ZG_Cvt_SearchControllers(AHandle: THandle; AMaxCtrs: Integer=MaxInt; AFlags: Cardinal=0): HResult; stdcall;
function ZG_Cvt_FindNextController(AHandle: THandle; VInfo: PZG_FIND_CTR_INFO): HResult; stdcall;

// Возвращает информацию о конвертере
function ZG_Cvt_GetInformation(AHandle: THandle; var VInfo: TZG_CVT_INFO): HResult; stdcall;

// Настраивает уведомления от конвертера
function ZG_Cvt_SetNotification(AHandle: THandle; ASettings: PZG_CVT_NOTIFY_SETTINGS): HResult; stdcall;
function ZG_Cvt_GetNextMessage(AHandle: THandle; var VMsg: Cardinal;
    var VMsgParam: NativeInt): HResult; stdcall;
function ZG_Cvt_GetScanCtrsState(AHandle: THandle; var VNextAddr: Integer): HResult; stdcall;

// Устанавливает в конвертер новую прошивку
function ZG_Cvt_UpdateFirmware(AHandle: THandle; Const AData; ACount: Integer;
    ACallback: TZG_PROCESSCALLBACK; AUserData: Pointer): HResult; stdcall;

// Возвращает информацию о лицензии конвертера
function ZG_Cvt_GetLicense(AHandle: THandle; ALicN: Byte;
    var VInfo: TZG_CVT_LIC_INFO): HResult; stdcall;
// Устанавливает новую лицензию
function ZG_Cvt_SetLicenseData(AHandle: THandle; ALicN: Byte;
    Const AData; ACount: Integer; VLicStatus: PWord=nil): HResult; stdcall;
// Очищает все лицензии в конвертере
function ZG_Cvt_ClearAllLicenses(AHandle: THandle): HResult; stdcall;
// Возвращает информацию о всех лицензиях, установленных в конвертер
function ZG_Cvt_GetAllLicenses(AHandle: THandle; VBuf: PZG_CVT_LIC_SINFO;
    VBufSize: Integer; var VCount: Integer): HResult; stdcall;

// Получить с/н конвертера и режим (только Guard)
function ZG_Cvt_GetShortInfo(AHandle: THandle; var VSn: Word; var VMode: TZG_GUARD_MODE): HResult; stdcall;
// Получить информационные строки конвертера (только Guard)
function ZG_Cvt_GetLongInfo(AHandle: THandle;
    VSn: PWord; VVersion: PCardinal; VMode: PZG_GUARD_MODE;
    VBuf: PWideChar; ABufSize: Integer; VLen: PInteger): HResult; stdcall;

// Установить в контроллер новую прошивку
function ZG_Cvt_UpdateCtrFirmware(AHandle: THandle; ASn: Word;
    Const AData; ACount: Integer; AInfoStr: PAnsiChar;
    ACallback: TZG_PROCESSCALLBACK; AUserData: Pointer;
    AModel: TZG_CTR_TYPE=ZG_CTR_UNDEF): HResult; stdcall;

// Установить новый сетевой адрес контроллера по с/н (в Advanced режиме не работает)
function ZG_Cvt_SetCtrAddrBySn(AHandle: THandle; ASn: Word; ANewAddr: Byte;
    AModel: TZG_CTR_TYPE=ZG_CTR_UNDEF): HResult; stdcall;
function ZG_Cvt_SetCtrAddr(AHandle: THandle; AOldAddr: Byte; ANewAddr: Byte;
    AModel: TZG_CTR_TYPE=ZG_CTR_UNDEF): HResult; stdcall;

// Запросить информацию контроллера по сетевому адресу
function ZG_Cvt_GetCtrInfoNorm(AHandle: THandle; AAddr: Byte; VTypeCode: PByte; VSn: PWord;
    VVersion: PWord; VInfoLines: PInteger; VFlags: PCardinal;
    AModel: TZG_CTR_TYPE=ZG_CTR_UNDEF): HResult; stdcall;
function ZG_Cvt_GetCtrInfoAdv(AHandle: THandle; AAddr: Byte; VTypeCode: PByte; VSn: PWord;
    VVersion: PWord; VFlags: PCardinal; VEvWrIdx: PInteger; VEvRdIdx: PInteger): HResult; stdcall;
// Запрашивает информацию о контроллере по серийному номеру.
function ZG_Cvt_GetCtrInfoBySn(AHandle: THandle; ASn: Word; VTypeCode: PByte; VAddr: PByte;
    VVersion: PWord; VInfoLines: PInteger; VFlags: PCardinal;
    AModel: TZG_CTR_TYPE=ZG_CTR_UNDEF): HResult; stdcall;
// Возвращает информационную строку контроллера
function ZG_Cvt_GetCtrInfoLine(AHandle: THandle; ASn: Word; ALineN: Integer;
    VBuf: PAnsiChar; ABufSize: Integer; VLen: PInteger=nil;
    AModel: TZG_CTR_TYPE=ZG_CTR_UNDEF): HResult; stdcall;
// Получить версию контроллера
function ZG_Cvt_GetCtrVersion(AHandle: THandle; AAddr: Byte; VVerData5: PByte;
    AWait: PZP_WAIT_SETTINGS=nil): HResult; stdcall;

//////////////////////////////////////////////////////////////////////////
// Функции для работы с контроллером
//

// Открывает/закрывает контроллер
function ZG_Ctr_Open(var VHandle: THandle; ACvtHandle: THandle; AAddr: Byte; ASn: Word;
    VInfo: PZG_CTR_INFO=nil; AModel: TZG_CTR_TYPE=ZG_CTR_UNDEF): HResult; stdcall;
// Возвращает информацию о контроллере
function ZG_Ctr_GetInformation(AHandle: THandle; var VInfo: TZG_CTR_INFO): HResult; stdcall;
// Настраивает уведомления от контроллера (если = nil, отключить все уведомления)
function ZG_Ctr_SetNotification(AHandle: THandle; ASettings: PZG_CTR_NOTIFY_SETTINGS): HResult; stdcall;
function ZG_Ctr_GetNextMessage(AHandle: THandle; var VMsg: Cardinal;
    var VMsgParam: NativeInt): HResult; stdcall;
// Установка сетевого адреса контроллера (Guard не поддерживает)
function ZG_Ctr_SetNewAddr(AHandle: THandle; ANewAddr: Byte): HResult; stdcall;
// Связать дескриптор контроллера с новым сетевым адресом контроллера
function ZG_Ctr_AssignAddr(AHandle: THandle; AAddr: Byte): HResult; stdcall;
// Установка новой прошивки контроллеру
function ZG_Ctr_UpdateFirmware(AHandle: THandle; Const AData; ACount: Integer;
    AInfoStr: PAnsiChar; ACallback: TZG_PROCESSCALLBACK; AUserData: Pointer): HResult; stdcall;

// Открыть замок
function ZG_Ctr_OpenLock(AHandle: THandle; ALockN: Integer=0): HResult; stdcall;
// Обесточить замки
function ZG_Ctr_CloseLock(AHandle: THandle): HResult; stdcall;
// Включить режим аварийного открывания дверей
function ZG_Ctr_EnableEmergencyUnlocking(AHandle: THandle; AEnable: LongBool): HResult; stdcall;
// Определить состояние режима аварийного открывания дверей
function ZG_Ctr_IsEmergencyUnlockingEnabled(AHandle: THandle; var VEnable: LongBool): HResult; stdcall;

// Считать регистры контроллера
function ZG_Ctr_ReadRegs(AHandle: THandle; AAddr: Cardinal;
    ACount: Integer; var VBuf): HResult; stdcall;
// Считать состояние портов
function ZG_Ctr_ReadPorts(AHandle: THandle; var VData: Cardinal): HResult; stdcall;
// Управление внешними устройствами (nDevType - адрес устройства ZG_DEV_..)
function ZG_Ctr_ControlDevices(AHandle: THandle; ADevType: Cardinal;
    AActive: LongBool; ATimeMs: Cardinal=0): HResult; stdcall;

// Чтение / запись памяти контроллера (nBankN - Адрес на шине: =0 Вход, =1 Выход, =2 События
function ZG_Ctr_ReadData(AHandle: THandle; ABankN: Integer;
    AAddr: Cardinal; ACount: Integer; var VBuf;
    var VReaded: Integer; ACallback: TZG_PROCESSCALLBACK; AUserData: Pointer): HResult; stdcall;
function ZG_Ctr_WriteData(AHandle: THandle; ABankN: Integer;
    AAddr: Cardinal; Const AData; ACount: Integer; 
    var VWritten: Integer; ACallback: TZG_PROCESSCALLBACK; AUserData: Pointer): HResult; stdcall;

// Получить времена для дверей контроллера
function ZG_Ctr_ReadLockTimes(AHandle: THandle; VOpenMs: PCardinal;
    VLetMs: PCardinal; VMaxMs: PCardinal; ABankN: Integer=0): HResult; stdcall;
// Установить времена для дверей контроллера
function ZG_Ctr_WriteLockTimes(AHandle: THandle; AMask: Cardinal; AOpenMs: Cardinal;
    ALetMs: Cardinal; AMaxMs: Cardinal; ABankN: Integer=0): HResult; stdcall;

// Получить одну или несколько временных зон
function ZG_Ctr_ReadTimeZones(AHandle: THandle; AIdx: Integer;
    VBuf: PZG_CTR_TIMEZONE; ACount: Integer;
    ACallback: TZG_PROCESSCALLBACK; AUserData: Pointer; ABankN: Integer=0): HResult; stdcall;
// Записать одну или несколько временных зон
function ZG_Ctr_WriteTimeZones(AHandle: THandle; AIdx: Integer;
    ATzs: PZG_CTR_TIMEZONE; ACount: Integer;
    ACallback: TZG_PROCESSCALLBACK; AUserData: Pointer; ABankN: Integer=0): HResult; stdcall;
// Перечислить временные зоны в контроллере
function ZG_Ctr_EnumTimeZones(AHandle: THandle; AStart: Integer;
    AEnumProc: TZG_ENUMCTRTIMEZONESPROC; AUserData: Pointer; ABankN: Integer=0): HResult; stdcall;

// Получить один или несколько ключей
function ZG_Ctr_ReadKeys(AHandle: THandle; AIdx: Integer;
    VBuf: PZG_CTR_KEY; ACount: Integer;
    ACallback: TZG_PROCESSCALLBACK; AUserData: Pointer; ABankN: Integer=0): HResult; stdcall;
// Записать один или несколько ключей
function ZG_Ctr_WriteKeys(AHandle: THandle; AIdx: Integer;
    AKeys: PZG_CTR_KEY; ACount: Integer;
    ACallback: TZG_PROCESSCALLBACK; AUserData: Pointer;
    ABankN: Integer=0; AUpdateTop: LongBool=True): HResult; stdcall;
// Удалить один или несколько ключей
function ZG_Ctr_ClearKeys(AHandle: THandle; AIdx: Integer; ACount: Integer;
    ACallback: TZG_PROCESSCALLBACK; AUserData: Pointer;
    ABankN: Integer=0; AUpdateTop: LongBool=True): HResult; stdcall;
// Получить индекс верхней границы ключей
function ZG_Ctr_GetKeyTopIndex(AHandle: THandle; var VIdx: Integer; ABankN: Integer=0): HResult; stdcall;
// Перечислить ключи в контроллере
function ZG_Ctr_EnumKeys(AHandle: THandle; AStart: Integer;
    AEnumProc: TZG_ENUMCTRKEYSPROC; AUserData: Pointer; ABankN: Integer=0): HResult; stdcall;

// Получить часы контроллера
function ZG_Ctr_GetClock(AHandle: THandle; var VClock: TZG_CTR_CLOCK): HResult; stdcall;
// Установить часы контроллера
function ZG_Ctr_SetClock(AHandle: THandle; Const AClock: TZG_CTR_CLOCK): HResult; stdcall;
